<resources>
    <string name="app_name">OurWed</string>
    <!--DrawerMenu-->
    <string name="menuUs">Про нас:</string>
    <string name="weAre">Это мы!</string>
    <string name="acquaintance">Как мы познакомились</string>
    <string name="moments">Памятные моменты</string>
    <string name="vips">Те, кто очень важен для нас</string>
    <string name="menuEvent">Про свадьбу</string>
    <string name="eventWhere">Где?</string>
    <string name="eventWhen">Когда?</string>
    <string name="eventSecondDay">Второй день</string>
    <string name="wishes">Пожелания молодым</string>
    <string name="acc">Аккаунт</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--SignInMenu-->
    <string name="signUp">Регистрация</string>
    <string name="signIn">Вход</string>
    <string name="signOut">Выход</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnReg">Зарегистрироваться</string>
    <string name="btnEnter">Войти</string>
    <string name="btnForgot">Забыли пароль?</string>
    <string name="emailResetPasword">На Ваш Email отправлено письмо с паролем от учетной записи</string>
    <string name="emailNotFound">Введите Email для отправки пароля</string>
    <string name="signUpEror">Не удалось зарегистрироваться</string>
    <string name="signInEror">Не удалось войти</string>
    <string name="sendVerificationEmailDone">На Вашу почту было отправленно письмо для подтверждения аккаунта.
    Пожалуйста, перейдите по ссылке в письме.</string>
    <string name="sendVerificationEmailError">Не удалось отправить email для поддтверждения.</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <string name="linkEmailToGoogle">Аккаунт соединён успешно</string>
    <string name="EnterWithGoogle">У Вас уже есть Google-аккаунт.
        Пожалуйста, войдите через него и пройдите повторную регистрацию через Email.</string>
    <string name="msg_token_fmt">"token4 - "</string>
    <!--RecyclerViewMenu-->
    <string name="edUserNameEmpty">Дайте имя Вашему фото/видео файлу</string>

    <!--Event3-->
    <string-array name="menuNames">
        <item>Это мы!</item>
        <item>Как мы познакомились</item>
        <item>Памятные моменты</item>
        <item>Те, кто очень важен для нас</item>
    </string-array>


</resources>